# pkg-desktop-overlay

./: Dockerfile  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
desktop_overlay/src/app/: main.py
desktop_overlay/src/interface/: ui_interface.py
desktop_overlay/src/provider/: ui_pyside6.py  widgets_pyside6.py  windows_pyside6.py
