[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop_overlay"
version = "0.0.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
description = "Python template description"
dependencies = [
    "PySide6 == 6.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.0",
]

[project.scripts]
desktop_overlay = "desktop_overlay.src.app.main:main_function"

[tool.setuptools]
packages = ["desktop_overlay"]

[tool.pytest.ini_options]
testpaths = ["test"]
